# python-gui-base

./: .gitignore  README.md  pyproject.toml
exe/: app.py
src/gui/: gui_streamlit.py  gui_tkinter.py
src/logic/: pipeline.py
